[package]
name = "ecs_bench"
version = "0.1.0"
authors = ["Lukas Schmierer <lukas.schmierer@lschmierer.de>"]
edition = "2018"

[dependencies]

[dev-dependencies]
rayon = "0.8"
specs = "0.10" # recently updated
froggy = "0.4.4" # 2 years old
constellation = "0.2" # 3 years old
tiny_ecs = "0.19"
legion = "0.2.1"

[dev-dependencies.hecs]
version = "0.2.7"
features = ["macros"]
